# dvalin-data

./: .eslintrc.cjs  .eslintrc.yml  .gitignore  .last_processed_commit  .prettierignore  .prettierrc  LICENSE  README.md  Temp.sh  bun.lockb  changed_files.txt  eslint.config.js  generateSchemas.js  globals.d.ts  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.js  renaming_file_script.sh  script.js  temp.js  tsconfig.build.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
dvalin-tools/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
dvalin-tools/__scraper_cache__/: redirect_links.json.REMOVED.git-id
dvalin-tools/dvalin_tools/agents/: event_agent.py
dvalin-tools/dvalin_tools/lib/: common.py  constants.py  fs_lock.py  languages.py  repository.py  s3.py  settings.py  tags.py  typescript.py
dvalin-tools/dvalin_tools/models/: common.py  events.py  network.py  tags.py
dvalin-tools/dvalin_tools/scrapers/: events.py
dvalin-tools/dvalin_tools/scrappers/: events.py
python/: toPascal.ipynb
schemas/: AchievementCategory.json  AchievementCategory.schema.json  AchievementExtraData.schema.json  Artifact.json  Artifact.schema.json  Bait.json  Bait.schema.json  Banner.json  Banner.schema.json  Banners.schema.json  Character.json  Character.schema.json  CharacterExpMaterial.schema.json  CommonMaterial.json  CommonMaterial.schema.json  Domains.json  Domains.schema.json  ElementalStoneMaterial.json  ElementalStoneMaterial.schema.json  Events.json  Events.schema.json  ExpMaterial.json  Fish.json  (+33 more)
(+63482 files in other folders)
